Updates link naming

--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "cosmere-maps",
-  "version": "1.0.0",
+  "name": "character-journey-map",
+  "description": "An interactive character journey mapping component package",
+  "author": "altonchaney",
+  "version": "1.0.1",
+  "keywords": ["react", "components", "ui"],
   "private": false,
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -26,7 +30,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -47,5 +51,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2"
+  },
+  "main": "dist/index.tsx",
+  "module": "dist/index.tsx",
+  "files": [ "dist", "README.md" ],
+  "repository": {
+      "type": "git",
+      "url": "git+https://github.com/altonchaney/character-journey-map.git"
   }
 }
