--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "character-journey-map",
   "description": "An interactive character journey mapping component package",
   "author": "altonchaney",
-  "version": "1.0.4",
+  "version": "1.0.8",
   "keywords": [
     "react",
     "components",
@@ -37,8 +37,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "clean": "rm -rf dist",
-    "build": "npm run clean && tsc && cp package.json README.md ./dist",
+    "clean": "rimraf dist/",
+    "copy-files": "copyfiles -u 1 src/**/*.css src/**/**/*.css dist/",
+    "build": "npm run clean && tsc && cp package.json README.md ./dist && yarn copy-files",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -52,12 +53,6 @@
     ">0.2%",
     "not dead",
     "not op_mini all"
-  ],
-  "main": "dist/index.tsx",
-  "module": "dist/index.tsx",
-  "files": [
-    "dist",
-    "README.md"
   ],
   "repository": {
     "type": "git",
